# simpler_eda

./: CONDUCT.rst  CONTRIBTOR.rst  CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  simpler_eda.rst
simpler_eda/: categorical_eda.py  corr_map.py  numerical_eda.py
tests/: test_categorical_eda.py  test_categorical_plot.py  test_corr_map.py  test_numerical_eda.py  test_simpler_eda.py
