[tool.poetry]
name = "simpler_eda"
version = "0.1.0"
description = "Python package that eases the pain of plotting numeric and categorical features in Altair"
authors = ["Nicholas Wu <misternicholaswu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
vega-datasets = "^0.9.0"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
