[tool.poetry]
name = "simpler_eda"
version = "0.1.6"
description = "Python package that eases the pain of plotting numeric and categorical features in Altair"
authors = ["Nicholas Wu <misternicholaswu@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UBC-MDS/simpler_eda"
repository = "https://github.com/UBC-MDS/simpler_eda"
documentation = 'https://simpler_eda.readthedocs.io'

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
vega-datasets = "^0.9.0"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.11.1"
flake8 = "^3.8.4"
pytest = "^6.2.2"
codecov = "^2.1.11"
python-semantic-release = "^7.15.0"
Sphinx = "^3.5.2"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "simpler_eda/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"